syntax = "proto3";
package defundlabs.defund.etf;

import "gogoproto/gogo.proto";
import "broker/broker.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/defund-labs/defund/x/etf/types";

message FundPrices {
  string id = 1;
  repeated FundPrice prices = 2;
  uint64 NextPruneHeight = 3;
}

message FundPrice {
  string id = 1;
  uint64 height = 2;
  google.protobuf.Timestamp time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  cosmos.base.v1beta1.Coin amount = 4;
  string symbol = 5;
}

message Holding {
  string token = 1;
  int64 percent = 2;
  // Pool ID of the Pool for this holding on Broker
  uint64 poolId = 3;
}

message Fund {
  string symbol = 1;
  string address = 2; 
  string name = 3; 
  string description = 4; 
  cosmos.base.v1beta1.Coin shares = 5 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.nullable) = false
  ];
  broker.Broker broker = 6;
  repeated Holding holdings = 7 [
    (gogoproto.moretags) = "yaml:\"holdings\" json:\"holdings\"",
    (gogoproto.nullable) = false
  ];
  int64 rebalance = 8;
  string baseDenom = 9;
  string connectionId = 10;
  string creator = 11;
}

message Invest {
  string id = 1;
  string creator = 2;
  Fund fund = 3;
  cosmos.base.v1beta1.Coin amount = 4;
  string channel = 5;
  string sequence = 6;
  string status = 7;
}

message Uninvest {
  string id = 1;
  string creator = 2;
  Fund fund = 3;
  cosmos.base.v1beta1.Coin amount = 4;
  string channel = 5;
  string sequence = 6;
  string status = 7;
}

